Issue 1598: Security updates with Weaver upgrade (#1612)
* WIP

- Update Dependencies, explicitly removing conflicting or insecure types using exclusions.
- The exclusion for `org.junit.vintage: junit-vintage-engine` might be unnecessary due to `org.springframework.boot: spring-boot-starter-test` supposedly no longer including it by default.
- Stop using `mockito-all` which pulls in lots of unnecessary stuff; instead, use `mockito-junit-jupiter` and `mockito-core`.
- Explicitly include plugin for `org.apache.maven.plugins: maven-surefire-plugin` and `org.apache.maven.plugins: maven-failsafe-plugin` to work-around maven program problems with surefire.
- AppWebSecurityConfig is updated to use `\n` rather than ` ` (single space) for determining role hierarchy.
- Remove old apache commons inclusions that are being intermixed with new apache commons (remove old version of apache commons and keep the newest version).
- Many of the repository functions have new stuctures and names, some of which now return Optional.
- The current behavior is to just call `.get()` to reduce the amount of changes, but future development should consider fixing this to perform NULL checks by calling the appropriate function on `Optional`.
- The System Data Loader has been overhauled specifically for the Submission Status.
- The Submission Status data is now two separate files, both single-depth, and now does not require copying duplicate data.
- Update tests from Junit4 to Junit5.
- Many of the tests temporarily use `lenient()` but these will be removed and replaced when there is time.
- The UserControllerTest in particular is using a lot of `verify()` which should be avoided and instead the values should be retrieved and tests like `expectEquals()` should be used.
- The `verify()` is only good when there is nothing returned to verify and as such verification of the function call is necessary.
- All of the `application.yaml` files are renamed to `application.yml`.
- The test `