@@ -1,42 +1,47 @@
 package org.tdl.vireo.model;
 
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
-import org.junit.After;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.Test;
 import org.springframework.dao.DataIntegrityViolationException;
 
 public class FieldPredicateTest extends AbstractEntityTest {
 
     @Override
+    @Test
     public void testCreate() {
-        FieldPredicate fieldPredicate = fieldPredicateRepo.create(TEST_FIELD_PREDICATE_VALUE, new Boolean(false));
-        assertEquals("The repository did not save the entity!", 1, fieldPredicateRepo.count());
-        assertEquals("Saved entity did not contain the value!", TEST_FIELD_PREDICATE_VALUE, fieldPredicate.getValue());
+        FieldPredicate fieldPredicate = fieldPredicateRepo.create(TEST_FIELD_PREDICATE_VALUE, Boolean.valueOf(false));
+        assertEquals(1, fieldPredicateRepo.count(), "The repository did not save the entity!");
+        assertEquals(TEST_FIELD_PREDICATE_VALUE, fieldPredicate.getValue(), "Saved entity did not contain the value!");
     }
 
     @Override
+    @Test
     public void testDuplication() {
-        fieldPredicateRepo.create(TEST_FIELD_PREDICATE_VALUE, new Boolean(false));
+        fieldPredicateRepo.create(TEST_FIELD_PREDICATE_VALUE, Boolean.valueOf(false));
         try {
-            fieldPredicateRepo.create(TEST_FIELD_PREDICATE_VALUE, new Boolean(false));
+            fieldPredicateRepo.create(TEST_FIELD_PREDICATE_VALUE, Boolean.valueOf(false));
         } catch (DataIntegrityViolationException e) {
             /* SUCCESS */ }
-        assertEquals("The repository duplicated entity!", 1, fieldPredicateRepo.count());
+        assertEquals(1, fieldPredicateRepo.count(), "The repository duplicated entity!");
     }
 
     @Override
+    @Test
     public void testDelete() {
-        FieldPredicate fieldPredicate = fieldPredicateRepo.create(TEST_FIELD_PREDICATE_VALUE, new Boolean(false));
+        FieldPredicate fieldPredicate = fieldPredicateRepo.create(TEST_FIELD_PREDICATE_VALUE, Boolean.valueOf(false));
         fieldPredicateRepo.delete(fieldPredicate);
-        assertEquals("The entity was not deleted!", 0, fieldPredicateRepo.count());
+        assertEquals(0, fieldPredicateRepo.count(), "The entity was not deleted!");
     }
 
     @Override
+    @Test
     public void testCascade() {
 
     }
 
-    @After
+    @AfterEach
     public void cleanUp() {
         fieldPredicateRepo.deleteAll();
     }
