@@ -1,62 +1,64 @@
 package org.tdl.vireo.model;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotEquals;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import javax.transaction.Transactional;
 
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.springframework.dao.DataIntegrityViolationException;
 
 public class OrganizationTest extends AbstractEntityTest {
 
-    @Before
+    @BeforeEach
     public void setUp() {
 
-        assertEquals("The organization repository was not empty!", 0, organizationRepo.count());
+        assertEquals(0, organizationRepo.count(), "The organization repository was not empty!");
 
         parentCategory = organizationCategoryRepo.create(TEST_PARENT_CATEGORY_NAME);
 
-        assertEquals("The category does not exist!", 1, organizationCategoryRepo.count());
+        assertEquals(1, organizationCategoryRepo.count(), "The category does not exist!");
 
         submissionStatus = submissionStatusRepo.create(TEST_SUBMISSION_STATUS_NAME, TEST_SUBMISSION_STATUS_ARCHIVED, TEST_SUBMISSION_STATUS_PUBLISHABLE, TEST_SUBMISSION_STATUS_DELETABLE, TEST_SUBMISSION_STATUS_EDITABLE_BY_REVIEWER, TEST_SUBMISSION_STATUS_EDITABLE_BY_STUDENT, TEST_SUBMISSION_STATUS_ACTIVE, null);
 
-        assertEquals("The submissionStatus does not exist!", 1, submissionStatusRepo.count());
+        assertEquals(1, submissionStatusRepo.count(), "The submissionStatus does not exist!");
 
         emailTemplate = emailTemplateRepo.create(TEST_EMAIL_TEMPLATE_NAME, TEST_EMAIL_TEMPLATE_SUBJECT, TEST_EMAIL_TEMPLATE_MESSAGE);
 
-        assertEquals("The emailTemplate does not exist!", 1, emailTemplateRepo.count());
+        assertEquals(1, emailTemplateRepo.count(), "The emailTemplate does not exist!");
 
         emailWorkflowRule = emailWorkflowRuleRepo.create(submissionStatus, emailRecipient, emailTemplate);
 
-        assertEquals("The emailWorkflowRule does not exist!", 1, emailWorkflowRuleRepo.count());
+        assertEquals(1, emailWorkflowRuleRepo.count(), "The emailWorkflowRule does not exist!");
     }
 
     @Override
+    @Test
     public void testCreate() {
         Organization parentOrganization = organizationRepo.create(TEST_PARENT_ORGANIZATION_NAME, parentCategory);
         parentOrganization.addEmail(TEST_PARENT_EMAIL);
         parentOrganization.addEmailWorkflowRule(emailWorkflowRule);
         parentOrganization = organizationRepo.save(parentOrganization);
 
-        assertEquals("The repository did not save the entity!", 1, organizationRepo.count());
-        assertEquals("Saved entity did not contain the correct name!", TEST_PARENT_ORGANIZATION_NAME, parentOrganization.getName());
-        assertEquals("Saved entity did not contain the correct category name!", parentCategory.getName(), parentOrganization.getCategory().getName());
-        assertEquals("Saved entity did not have the emailWorkflow rule!", true, parentOrganization.getEmailWorkflowRules().contains(emailWorkflowRule));
+        assertEquals(1, organizationRepo.count(), "The repository did not save the entity!");
+        assertEquals(TEST_PARENT_ORGANIZATION_NAME, parentOrganization.getName(), "Saved entity did not contain the correct name!");
+        assertEquals(parentCategory.getName(), parentOrganization.getCategory().getName(), "Saved entity did not contain the correct category name!");
+        assertEquals(true, parentOrganization.getEmailWorkflowRules().contains(emailWorkflowRule), "Saved entity did not have the emailWorkflow rule!");
 
         childCategory = organizationCategoryRepo.create(TEST_CHILD_CATEGORY_NAME);
         Organization childOrganization = organizationRepo.create(TEST_CHILD_ORGANIZATION_NAME, parentOrganization, childCategory);
 
-        assertEquals("The parent organization was not atached to the child!", parentOrganization, childOrganization.getParentOrganization());
-        assertEquals("The child organization was not atached to the parent!", 1, parentOrganization.getChildrenOrganizations().size());
-        assertEquals("The child organization's id was incorrect!", childOrganization.getId(), ((Organization) parentOrganization.getChildrenOrganizations().toArray()[0]).getId());
-        assertEquals("The parent's organization's id was incorrect!", parentOrganization.getId(), childOrganization.getParentOrganization().getId());
+        assertEquals(parentOrganization, childOrganization.getParentOrganization(), "The parent organization was not atached to the child!");
+        assertEquals(1, parentOrganization.getChildrenOrganizations().size(), "The child organization was not atached to the parent!");
+        assertEquals(childOrganization.getId(), ((Organization) parentOrganization.getChildrenOrganizations().toArray()[0]).getId(), "The child organization's id was incorrect!");
+        assertEquals(parentOrganization.getId(), childOrganization.getParentOrganization().getId(), "The parent's organization's id was incorrect!");
     }
 
     @Override
+    @Test
     public void testDuplication() {
         Organization parentOrganization = organizationRepo.create(TEST_PARENT_ORGANIZATION_NAME, parentCategory);
         organizationRepo.create(TEST_CHILD_ORGANIZATION_NAME, parentOrganization, parentCategory);
@@ -69,17 +71,19 @@ public class OrganizationTest extends AbstractEntityTest {
             System.out.println("Have org " + o.getName() + " with category " + o.getCategory() + " with parent " + o.getParentOrganization());
         }
 
-        assertEquals("The repository duplicated entity!", 2, organizationRepo.count());
+        assertEquals(2, organizationRepo.count(), "The repository duplicated entity!");
     }
 
     @Override
+    @Test
     public void testDelete() {
         Organization organization = organizationRepo.create(TEST_PARENT_ORGANIZATION_NAME, parentCategory);
         organizationRepo.delete(organization);
-        assertEquals("Entity did not delete!", 0, organizationRepo.count());
+        assertEquals(0, organizationRepo.count(), "Entity did not delete!");
     }
 
     @Override
+    @Test
     public void testCascade() {
 
         // create categories
@@ -88,43 +92,43 @@ public class OrganizationTest extends AbstractEntityTest {
 
         // create organizations
         Organization parentOrganization = organizationRepo.create(TEST_PARENT_ORGANIZATION_NAME, parentCategory);
-        parentCategory = organizationCategoryRepo.findOne(parentCategory.getId());
+        parentCategory = organizationCategoryRepo.findById(parentCategory.getId()).get();
 
         Organization childOrganization = organizationRepo.create(TEST_CHILD_ORGANIZATION_NAME, parentOrganization, childCategory);
-        childCategory = organizationCategoryRepo.findOne(childCategory.getId());
-        parentOrganization = organizationRepo.findOne(parentOrganization.getId());
+        childCategory = organizationCategoryRepo.findById(childCategory.getId()).get();
+        parentOrganization = organizationRepo.findById(parentOrganization.getId()).get();
 
         Organization grandChildOrganization = organizationRepo.create(TEST_GRAND_CHILD_ORGANIZATION_NAME, childOrganization, grandChildCategory);
-        grandChildCategory = organizationCategoryRepo.findOne(grandChildCategory.getId());
-        childOrganization = organizationRepo.findOne(childOrganization.getId());
+        grandChildCategory = organizationCategoryRepo.findById(grandChildCategory.getId()).get();
+        childOrganization = organizationRepo.findById(childOrganization.getId()).get();
 
         Organization severableParentOrganization = organizationRepo.create(TEST_SEVERABLE_PARENT_ORGANIZATION_NAME, parentCategory);
-        parentCategory = organizationCategoryRepo.findOne(parentCategory.getId());
+        parentCategory = organizationCategoryRepo.findById(parentCategory.getId()).get();
 
         Organization childOrganizationToDisinherit = organizationRepo.create(TEST_SEVERABLE_CHILD_ORGANIZATION_NAME, parentOrganization, childCategory);
-        childCategory = organizationCategoryRepo.findOne(childCategory.getId());
-        parentOrganization = organizationRepo.findOne(parentOrganization.getId());
+        childCategory = organizationCategoryRepo.findById(childCategory.getId()).get();
+        parentOrganization = organizationRepo.findById(parentOrganization.getId()).get();
 
         // create organization workflow steps
         WorkflowStep parentWorkflowStep = workflowStepRepo.create(TEST_WORKFLOW_STEP_NAME, parentOrganization);
-        parentOrganization = organizationRepo.findOne(parentOrganization.getId());
-        childOrganization = organizationRepo.findOne(childOrganization.getId());
+        parentOrganization = organizationRepo.findById(parentOrganization.getId()).get();
+        childOrganization = organizationRepo.findById(childOrganization.getId()).get();
 
         WorkflowStep childWorkflowStep = workflowStepRepo.create(TEST_WORKFLOW_STEP_NAME, childOrganization);
-        childOrganization = organizationRepo.findOne(childOrganization.getId());
-        grandChildOrganization = organizationRepo.findOne(grandChildOrganization.getId());
+        childOrganization = organizationRepo.findById(childOrganization.getId()).get();
+        grandChildOrganization = organizationRepo.findById(grandChildOrganization.getId()).get();
 
         WorkflowStep grandChildWorkflowStep = workflowStepRepo.create(TEST_WORKFLOW_STEP_NAME, grandChildOrganization);
-        parentOrganization = organizationRepo.findOne(parentOrganization.getId());
-        grandChildOrganization = organizationRepo.findOne(grandChildOrganization.getId());
+        parentOrganization = organizationRepo.findById(parentOrganization.getId()).get();
+        grandChildOrganization = organizationRepo.findById(grandChildOrganization.getId()).get();
 
         WorkflowStep severableParentWorkflowStep = workflowStepRepo.create(TEST_SEVERABLE_WORKFLOW_STEP_NAME, parentOrganization);
-        parentOrganization = organizationRepo.findOne(parentOrganization.getId());
-        childOrganization = organizationRepo.findOne(childOrganization.getId());
+        parentOrganization = organizationRepo.findById(parentOrganization.getId()).get();
+        childOrganization = organizationRepo.findById(childOrganization.getId()).get();
 
         WorkflowStep severableChildWorkflowStep = workflowStepRepo.create(TEST_SEVERABLE_WORKFLOW_STEP_NAME, childOrganization);
-        childOrganization = organizationRepo.findOne(childOrganization.getId());
-        grandChildOrganization = organizationRepo.findOne(grandChildOrganization.getId());
+        childOrganization = organizationRepo.findById(childOrganization.getId()).get();
+        grandChildOrganization = organizationRepo.findById(grandChildOrganization.getId()).get();
 
         // add emails to organizations
         parentOrganization.addEmail(TEST_PARENT_EMAIL);
@@ -138,198 +142,196 @@ public class OrganizationTest extends AbstractEntityTest {
 
         parentOrganization = organizationRepo.save(parentOrganization);
 
-        parentOrganization = organizationRepo.findOne(parentOrganization.getId());
-        childOrganization = organizationRepo.findOne(childOrganization.getId());
-        grandChildOrganization = organizationRepo.findOne(grandChildOrganization.getId());
-        severableParentOrganization = organizationRepo.findOne(severableParentOrganization.getId());
-        childOrganizationToDisinherit = organizationRepo.findOne(childOrganizationToDisinherit.getId());
+        parentOrganization = organizationRepo.findById(parentOrganization.getId()).get();
+        childOrganization = organizationRepo.findById(childOrganization.getId()).get();
+        grandChildOrganization = organizationRepo.findById(grandChildOrganization.getId()).get();
+        severableParentOrganization = organizationRepo.findById(severableParentOrganization.getId()).get();
+        childOrganizationToDisinherit = organizationRepo.findById(childOrganizationToDisinherit.getId()).get();
 
-        assertEquals("The emailWorkflowRule does not exist!", 1, emailWorkflowRuleRepo.count());
-        assertEquals("The emailWorkflowRule does not exist on parent organization!", emailWorkflowRule.getId(), ((EmailWorkflowRule) parentOrganization.getEmailWorkflowRules().toArray()[0]).getId());
+        assertEquals(1, emailWorkflowRuleRepo.count(), "The emailWorkflowRule does not exist!");
+        assertEquals(emailWorkflowRule.getId(), ((EmailWorkflowRule) parentOrganization.getEmailWorkflowRules().toArray()[0]).getId(), "The emailWorkflowRule does not exist on parent organization!");
 
         // check workflow step
-        assertEquals("The parent organization did not add the workflow step!", true, parentOrganization.getOriginalWorkflowSteps().contains(severableParentWorkflowStep));
-        assertEquals("The parent organization did not add the workflow step!", true, childOrganization.getOriginalWorkflowSteps().contains(severableChildWorkflowStep));
+        assertEquals(true, parentOrganization.getOriginalWorkflowSteps().contains(severableParentWorkflowStep), "The parent organization did not add the workflow step!");
+        assertEquals(true, childOrganization.getOriginalWorkflowSteps().contains(severableChildWorkflowStep), "The parent organization did not add the workflow step!");
 
         // check workflow
-        assertEquals("The child organization did not add the workflow step!", true, childOrganization.getAggregateWorkflowSteps().contains(severableParentWorkflowStep));
-        assertEquals("The child organization did not add the workflow step!", true, childOrganization.getAggregateWorkflowSteps().contains(severableChildWorkflowStep));
-        assertEquals("The grand child organization did not add the workflow step!", true, grandChildOrganization.getAggregateWorkflowSteps().contains(severableParentWorkflowStep));
-        assertEquals("The grand child organization did not add the workflow step!", true, grandChildOrganization.getAggregateWorkflowSteps().contains(severableChildWorkflowStep));
-        assertEquals("The grand child organization did not add the workflow step!", true, grandChildOrganization.getAggregateWorkflowSteps().contains(grandChildWorkflowStep));
+        assertEquals(true, childOrganization.getAggregateWorkflowSteps().contains(severableParentWorkflowStep), "The child organization did not add the workflow step!");
+        assertEquals(true, childOrganization.getAggregateWorkflowSteps().contains(severableChildWorkflowStep), "The child organization did not add the workflow step!");
+        assertEquals(true, grandChildOrganization.getAggregateWorkflowSteps().contains(severableParentWorkflowStep), "The grand child organization did not add the workflow step!");
+        assertEquals(true, grandChildOrganization.getAggregateWorkflowSteps().contains(severableChildWorkflowStep), "The grand child organization did not add the workflow step!");
+        assertEquals(true, grandChildOrganization.getAggregateWorkflowSteps().contains(grandChildWorkflowStep), "The grand child organization did not add the workflow step!");
 
         // check workflow inheritance
-        assertEquals("The child organization did not inherit parent workflow step!", true, childOrganization.getAggregateWorkflowSteps().contains(parentWorkflowStep));
-        assertEquals("The grand child organization did not inherit parent workflow step!", true, grandChildOrganization.getAggregateWorkflowSteps().contains(parentWorkflowStep));
-        assertEquals("The grand child organization did not inherit child workflow step!", true, grandChildOrganization.getAggregateWorkflowSteps().contains(childWorkflowStep));
+        assertEquals(true, childOrganization.getAggregateWorkflowSteps().contains(parentWorkflowStep), "The child organization did not inherit parent workflow step!");
+        assertEquals(true, grandChildOrganization.getAggregateWorkflowSteps().contains(parentWorkflowStep), "The grand child organization did not inherit parent workflow step!");
+        assertEquals(true, grandChildOrganization.getAggregateWorkflowSteps().contains(childWorkflowStep), "The grand child organization did not inherit child workflow step!");
 
         // verify parent organization
         parentOrganization = (Organization) childOrganization.getParentOrganization();
 
-        assertEquals("The parent organization did not have the correct name!", TEST_PARENT_ORGANIZATION_NAME, parentOrganization.getName());
-        assertEquals("The parent organization category dit not have the correct name!", TEST_PARENT_CATEGORY_NAME, parentOrganization.getCategory().getName());
-        assertEquals("The parent organization has the wrong email workflow rule", true, parentOrganization.getEmailWorkflowRules().contains(emailWorkflowRule));
+        assertEquals(TEST_PARENT_ORGANIZATION_NAME, parentOrganization.getName(), "The parent organization did not have the correct name!");
+        assertEquals(TEST_PARENT_CATEGORY_NAME, parentOrganization.getCategory().getName(), "The parent organization category dit not have the correct name!");
+        assertEquals(true, parentOrganization.getEmailWorkflowRules().contains(emailWorkflowRule), "The parent organization has the wrong email workflow rule");
 
         // check number of child organizations of parent organization
-        assertEquals("The parent organization had incorrect number of children!", 2, parentOrganization.getChildrenOrganizations().size());
+        assertEquals(2, parentOrganization.getChildrenOrganizations().size(), "The parent organization had incorrect number of children!");
 
         // verify child organization
-        assertTrue("The parent did not have the child organization!", parentOrganization.getChildrenOrganizations().contains(childOrganization));
-        assertTrue("The parent did not have the severable child organization!", parentOrganization.getChildrenOrganizations().contains(childOrganizationToDisinherit));
-        assertEquals("The parent's child organization category did not have the correct Name!", TEST_CHILD_CATEGORY_NAME, childOrganization.getCategory().getName());
+        assertTrue(parentOrganization.getChildrenOrganizations().contains(childOrganization), "The parent did not have the child organization!");
+        assertTrue(parentOrganization.getChildrenOrganizations().contains(childOrganizationToDisinherit), "The parent did not have the severable child organization!");
+        assertEquals(TEST_CHILD_CATEGORY_NAME, childOrganization.getCategory().getName(), "The parent's child organization category did not have the correct Name!");
 
         // check number of child(grand child) organizations of child organization
-        assertEquals("The child organization had incorrect number of grand children!", 1, childOrganization.getChildrenOrganizations().size());
+        assertEquals(1, childOrganization.getChildrenOrganizations().size(), "The child organization had incorrect number of grand children!");
 
         // verify grand child organization
-        assertTrue("The parent did not have the severable child organization!", childOrganization.getChildrenOrganizations().contains(grandChildOrganization));
-        assertEquals("The grand child organization category dit not have the correct Name!", TEST_GRAND_CHILD_CATEGORY_NAME, grandChildOrganization.getCategory().getName());
+        assertTrue(childOrganization.getChildrenOrganizations().contains(grandChildOrganization), "The parent did not have the severable child organization!");
+        assertEquals(TEST_GRAND_CHILD_CATEGORY_NAME, grandChildOrganization.getCategory().getName(), "The grand child organization category dit not have the correct Name!");
 
         // test remove severable workflow steps
         parentOrganization.removeOriginalWorkflowStep(severableParentWorkflowStep);
         parentOrganization = organizationRepo.save(parentOrganization);
-        childOrganization = organizationRepo.findOne(childOrganization.getId());
+        childOrganization = organizationRepo.findById(childOrganization.getId()).get();
 
-        assertEquals("The severable workflow step was not removed!", 1, parentOrganization.getOriginalWorkflowSteps().size());
-        assertNotEquals("The sererable workflow step was not deleted!", null, workflowStepRepo.findByName(severableParentWorkflowStep.getName()));
+        assertEquals(1, parentOrganization.getOriginalWorkflowSteps().size(), "The severable workflow step was not removed!");
+        assertNotEquals(null, workflowStepRepo.findByName(severableParentWorkflowStep.getName()), "The sererable workflow step was not deleted!");
 
         childOrganization.removeOriginalWorkflowStep(severableChildWorkflowStep);
         childOrganization = organizationRepo.save(childOrganization);
 
-        grandChildOrganization = organizationRepo.findOne(grandChildOrganization.getId());
+        grandChildOrganization = organizationRepo.findById(grandChildOrganization.getId()).get();
 
-        assertEquals("The severable workflow step was not removed!", false, childOrganization.getAggregateWorkflowSteps().contains(severableChildWorkflowStep));
-        assertNotEquals("The sererable workflow step was not deleted!", null, workflowStepRepo.findByName(severableChildWorkflowStep.getName()));
+        assertEquals(false, childOrganization.getAggregateWorkflowSteps().contains(severableChildWorkflowStep), "The severable workflow step was not removed!");
+        assertNotEquals(null, workflowStepRepo.findByName(severableChildWorkflowStep.getName()), "The sererable workflow step was not deleted!");
 
         // check workflowstep removal inheritance
-        assertEquals("The parent organization did not remove the workflow step!", false, parentOrganization.getAggregateWorkflowSteps().contains(severableParentWorkflowStep));
-        assertEquals("The child organization did not remove the workflow step!", false, childOrganization.getAggregateWorkflowSteps().contains(severableParentWorkflowStep));
-        assertEquals("The child organization did not remove the workflow step!", false, childOrganization.getAggregateWorkflowSteps().contains(severableChildWorkflowStep));
-        assertEquals("The grand child organization did not remove the workflow step!", false, grandChildOrganization.getAggregateWorkflowSteps().contains(severableParentWorkflowStep));
-        assertEquals("The grand child organization did not remove the workflow step!", false, grandChildOrganization.getAggregateWorkflowSteps().contains(severableChildWorkflowStep));
+        assertEquals(false, parentOrganization.getAggregateWorkflowSteps().contains(severableParentWorkflowStep), "The parent organization did not remove the workflow step!");
+        assertEquals(false, childOrganization.getAggregateWorkflowSteps().contains(severableParentWorkflowStep), "The child organization did not remove the workflow step!");
+        assertEquals(false, childOrganization.getAggregateWorkflowSteps().contains(severableChildWorkflowStep), "The child organization did not remove the workflow step!");
+        assertEquals(false, grandChildOrganization.getAggregateWorkflowSteps().contains(severableParentWorkflowStep), "The grand child organization did not remove the workflow step!");
+        assertEquals(false, grandChildOrganization.getAggregateWorkflowSteps().contains(severableChildWorkflowStep), "The grand child organization did not remove the workflow step!");
 
-        severableParentWorkflowStep = workflowStepRepo.findOne(severableParentWorkflowStep.getId());
+        severableParentWorkflowStep = workflowStepRepo.findById(severableParentWorkflowStep.getId()).get();
 
-        parentOrganization = organizationRepo.findOne(parentOrganization.getId());
+        parentOrganization = organizationRepo.findById(parentOrganization.getId()).get();
 
         // reattach severable workflow steps
         parentOrganization.addOriginalWorkflowStep(severableParentWorkflowStep);
         parentOrganization = organizationRepo.save(parentOrganization);
 
-        childOrganization = organizationRepo.findOne(childOrganization.getId());
+        childOrganization = organizationRepo.findById(childOrganization.getId()).get();
 
-        assertEquals("The parent organization had incorrect number of workflow steps!", 2, parentOrganization.getAggregateWorkflowSteps().size());
+        assertEquals(2, parentOrganization.getAggregateWorkflowSteps().size(), "The parent organization had incorrect number of workflow steps!");
 
         childOrganization.addOriginalWorkflowStep(severableChildWorkflowStep);
         childOrganization = organizationRepo.save(childOrganization);
 
-        grandChildOrganization = organizationRepo.findOne(grandChildOrganization.getId());
+        grandChildOrganization = organizationRepo.findById(grandChildOrganization.getId()).get();
 
-        assertEquals("The child organization had incorrect number of workflow steps!", 4, childOrganization.getAggregateWorkflowSteps().size());
+        assertEquals(4, childOrganization.getAggregateWorkflowSteps().size(), "The child organization had incorrect number of workflow steps!");
 
         // test remove severable child organization
         parentOrganization.removeChildOrganization(childOrganizationToDisinherit);
         parentOrganization = organizationRepo.save(parentOrganization);
 
-        childOrganizationToDisinherit = organizationRepo.findOne(childOrganizationToDisinherit.getId());
-        assertNotEquals("The severable child organization was deleted!", null, childOrganizationToDisinherit);
+        childOrganizationToDisinherit = organizationRepo.findById(childOrganizationToDisinherit.getId()).get();
+        assertNotEquals(null, childOrganizationToDisinherit, "The severable child organization was deleted!");
 
-        parentOrganization = organizationRepo.findOne(parentOrganization.getId());
-        assertEquals("The parent organization had incorrect number of children!", 1, parentOrganization.getChildrenOrganizations().size());
+        parentOrganization = organizationRepo.findById(parentOrganization.getId()).get();
+        assertEquals(1, parentOrganization.getChildrenOrganizations().size(), "The parent organization had incorrect number of children!");
 
         parentOrganization.removeEmailWorkflowRule(emailWorkflowRule);
         parentOrganization = organizationRepo.save(parentOrganization);
 
-        childOrganization = organizationRepo.findOne(childOrganization.getId());
-        assertEquals("The email workflow rule was not removed from the parent organization", 0, parentOrganization.getEmailWorkflowRules().size());
+        childOrganization = organizationRepo.findById(childOrganization.getId()).get();
+        assertEquals(0, parentOrganization.getEmailWorkflowRules().size(), "The email workflow rule was not removed from the parent organization");
 
         // reattach severable child organization
         parentOrganization.addChildOrganization(childOrganizationToDisinherit);
         parentOrganization = organizationRepo.save(parentOrganization);
-        childOrganization = organizationRepo.findOne(childOrganization.getId());
+        childOrganization = organizationRepo.findById(childOrganization.getId()).get();
 
-        assertEquals("The parent organization had incorrect number of children!", 2, parentOrganization.getChildrenOrganizations().size());
+        assertEquals(2, parentOrganization.getChildrenOrganizations().size(), "The parent organization had incorrect number of children!");
 
         // test delete severable child organization
-        assertNotEquals("The organization does not exist!", null, organizationRepo.findOne(childOrganizationToDisinherit.getId()));
+        assertNotEquals(null, organizationRepo.findById(childOrganizationToDisinherit.getId()), "The organization does not exist!");
 
-        childOrganizationToDisinherit = organizationRepo.findOne(childOrganizationToDisinherit.getId());
+        childOrganizationToDisinherit = organizationRepo.findById(childOrganizationToDisinherit.getId()).get();
 
         organizationRepo.delete(childOrganizationToDisinherit);
 
-        assertEquals("The organization was not deleted!", null, organizationRepo.findOne(childOrganizationToDisinherit.getId()));
-        assertNotEquals("The parent organization was deleted!", null, parentOrganization);
+        assertEquals(false, organizationRepo.findById(childOrganizationToDisinherit.getId()).isPresent(), "The organization was not deleted!");
+        assertNotEquals(null, parentOrganization, "The parent organization was deleted!");
 
-        parentOrganization = organizationRepo.findOne(parentOrganization.getId());
+        parentOrganization = organizationRepo.findById(parentOrganization.getId()).get();
 
-        assertEquals("The parent organization had incorrect number of children!", 1, parentOrganization.getChildrenOrganizations().size());
+        assertEquals(1, parentOrganization.getChildrenOrganizations().size(), "The parent organization had incorrect number of children!");
 
         // test delete severable parent organization
-        assertNotEquals("The organization does not exist!", null, organizationRepo.findOne(severableParentOrganization.getId()));
+        assertEquals(true, organizationRepo.findById(severableParentOrganization.getId()).isPresent(), "The organization does not exist!");
 
         organizationRepo.delete(severableParentOrganization);
 
-        assertEquals("The organization was not deleted!", null, organizationRepo.findOne(severableParentOrganization.getId()));
-        assertNotEquals("The child organization was deleted!", null, childOrganization);
+        assertEquals(false, organizationRepo.findById(severableParentOrganization.getId()).isPresent(), "The organization was not deleted!");
+        assertNotEquals(null, childOrganization, "The child organization was deleted!");
 
-        childOrganization = organizationRepo.findOne(childOrganization.getId());
+        childOrganization = organizationRepo.findById(childOrganization.getId()).get();
 
-        parentOrganization = organizationRepo.findOne(parentOrganization.getId());
+        parentOrganization = organizationRepo.findById(parentOrganization.getId()).get();
 
-        assertEquals("The child organization had wrong parents!", parentOrganization, childOrganization.getParentOrganization());
+        assertEquals(parentOrganization, childOrganization.getParentOrganization(), "The child organization had wrong parents!");
 
         // to test the orphan removal of the email workflow rule
         parentOrganization.addEmailWorkflowRule(emailWorkflowRule);
 
         parentOrganization = organizationRepo.save(parentOrganization);
 
-        assertEquals("The emailWorkflowRule does not exist!", 1, emailWorkflowRuleRepo.count());
-        assertEquals("The emailWorkflowRule does not exist on parent organization!", emailWorkflowRule.getId(), ((EmailWorkflowRule) parentOrganization.getEmailWorkflowRules().toArray()[0]).getId());
+        assertEquals(1, emailWorkflowRuleRepo.count(), "The emailWorkflowRule does not exist!");
+        assertEquals(emailWorkflowRule.getId(), ((EmailWorkflowRule) parentOrganization.getEmailWorkflowRules().toArray()[0]).getId(), "The emailWorkflowRule does not exist on parent organization!");
 
         // test delete parent organization
-        assertNotEquals("The organization does not exist!", null, organizationRepo.findOne(parentOrganization.getId()));
+        assertNotEquals(null, organizationRepo.findById(parentOrganization.getId()), "The organization does not exist!");
 
         organizationRepo.delete(parentOrganization);
 
-        assertEquals("The organization was not deleted!", null, organizationRepo.findOne(parentOrganization.getId()));
-        parentOrganization = organizationRepo.findOne(parentOrganization.getId());
-        assertEquals("The parent organization was not deleted!", null, parentOrganization);
-        childOrganization = organizationRepo.findOne(childOrganization.getId());
-        assertNotEquals("The child organization was deleted!", null, childOrganization);
-        grandChildOrganization = organizationRepo.findOne(grandChildOrganization.getId());
-        assertNotEquals("The grand child organization was deleted!", null, grandChildOrganization);
-        assertEquals("The child organization had a parent when it was not supposed to!", null, childOrganization.getParentOrganization());
+        assertEquals(false, organizationRepo.findById(parentOrganization.getId()).isPresent(), "The organization was not deleted!");
 
-        assertEquals("The parent workflowstep was not deleted!", null, workflowStepRepo.findOne(parentWorkflowStep.getId()));
-        assertEquals("The child contained workflowsteps with a detached originatingOrganization!", false, childOrganization.getOriginalWorkflowSteps().contains(parentWorkflowStep));
+        assertEquals(false, organizationRepo.findById(parentOrganization.getId()).isPresent(), "The parent organization was not deleted!");
+        childOrganization = organizationRepo.findById(childOrganization.getId()).get();
+        assertNotEquals(null, childOrganization, "The child organization was deleted!");
+        grandChildOrganization = organizationRepo.findById(grandChildOrganization.getId()).get();
+        assertNotEquals(null, grandChildOrganization, "The grand child organization was deleted!");
+        assertEquals(null, childOrganization.getParentOrganization(), "The child organization had a parent when it was not supposed to!");
+
+        assertEquals(false, workflowStepRepo.findById(parentWorkflowStep.getId()).isPresent(), "The parent workflowstep was not deleted!");
+        assertEquals(false, childOrganization.getOriginalWorkflowSteps().contains(parentWorkflowStep), "The child contained workflowsteps with a detached originatingOrganization!");
 
         // test delete child organization
-        assertNotEquals("The organization does not exist!", null, organizationRepo.findOne(childOrganization.getId()));
+        assertEquals(true, organizationRepo.findById(childOrganization.getId()).isPresent(), "The organization does not exist!");
         organizationRepo.delete(childOrganization);
 
-        assertEquals("The organization was not deleted!", null, organizationRepo.findOne(childOrganization.getId()));
+        assertEquals(false, organizationRepo.findById(childOrganization.getId()).isPresent(), "The organization was not deleted!");
 
-        grandChildOrganization = organizationRepo.findOne(grandChildOrganization.getId());
+        grandChildOrganization = organizationRepo.findById(grandChildOrganization.getId()).get();
 
-        assertNotEquals("The grand child organization was deleted!", null, grandChildOrganization);
-        assertEquals("The grand child organization had a parent when it was not supposed to!", null, grandChildOrganization.getParentOrganization());
+        assertNotEquals(null, grandChildOrganization, "The grand child organization was deleted!");
+        assertEquals(null, grandChildOrganization.getParentOrganization(), "The grand child organization had a parent when it was not supposed to!");
 
-        assertEquals("The grand child contained workflowsteps with a detached originatingOrganization!", false, grandChildOrganization.getOriginalWorkflowSteps().contains(parentWorkflowStep));
+        assertEquals(false, grandChildOrganization.getOriginalWorkflowSteps().contains(parentWorkflowStep), "The grand child contained workflowsteps with a detached originatingOrganization!");
 
         // test delete grand child organization
-        assertNotEquals("The organization does not exist!", null, organizationRepo.findOne(grandChildOrganization.getId()));
+        assertEquals(true, organizationRepo.findById(grandChildOrganization.getId()).isPresent(), "The organization does not exist!");
         organizationRepo.delete(grandChildOrganization);
 
-        assertEquals("The organization was not deleted!", null, organizationRepo.findOne(grandChildOrganization.getId()));
-        grandChildOrganization = organizationRepo.findOne(grandChildOrganization.getId());
+        assertEquals(false, organizationRepo.findById(grandChildOrganization.getId()).isPresent(), "The organization was not deleted!");
 
-        assertEquals("The grand child organization was deleted!", null, grandChildOrganization);
+        assertEquals(false, organizationRepo.findById(grandChildOrganization.getId()).isPresent(), "The grand child organization was deleted!");
 
-        assertEquals("All organizations were not deleted!", 0, organizationRepo.count());
-        assertEquals("The workflow steps were orphaned!", 0, workflowStepRepo.count());
-        assertEquals("The email workflow rule was orphaned!", 0, emailWorkflowRuleRepo.count());
-        assertEquals("An organization category was deleted!", 3, organizationCategoryRepo.count());
-
+        assertEquals(0, organizationRepo.count(), "All organizations were not deleted!");
+        assertEquals(0, workflowStepRepo.count(), "The workflow steps were orphaned!");
+        assertEquals(0, emailWorkflowRuleRepo.count(), "The email workflow rule was orphaned!");
+        assertEquals(3, organizationCategoryRepo.count(), "An organization category was deleted!");
     }
 
     @Test
@@ -337,26 +339,26 @@ public class OrganizationTest extends AbstractEntityTest {
 
         Organization topOrganization = organizationRepo.create(TEST_PARENT_ORGANIZATION_NAME, parentCategory);
         Long topOrganizationId = topOrganization.getId();
-        parentCategory = organizationCategoryRepo.findOne(parentCategory.getId());
+        parentCategory = organizationCategoryRepo.findById(parentCategory.getId()).get();
 
         Organization middleOrganization = organizationRepo.create(TEST_CHILD_ORGANIZATION_NAME, topOrganization, parentCategory);
-        parentCategory = organizationCategoryRepo.findOne(parentCategory.getId());
+        parentCategory = organizationCategoryRepo.findById(parentCategory.getId()).get();
 
         Organization leafOrganization = organizationRepo.create(TEST_GRAND_CHILD_ORGANIZATION_NAME, middleOrganization, parentCategory);
         Long leafOrgId = leafOrganization.getId();
-        parentCategory = organizationCategoryRepo.findOne(parentCategory.getId());
+        parentCategory = organizationCategoryRepo.findById(parentCategory.getId()).get();
 
-        topOrganization = organizationRepo.findOne(topOrganization.getId());
-        middleOrganization = organizationRepo.findOne(middleOrganization.getId());
+        topOrganization = organizationRepo.findById(topOrganization.getId()).get();
+        middleOrganization = organizationRepo.findById(middleOrganization.getId()).get();
 
         organizationRepo.delete(middleOrganization);
 
-        topOrganization = organizationRepo.findOne(topOrganizationId);
-        leafOrganization = organizationRepo.findOne(leafOrgId);
+        topOrganization = organizationRepo.findById(topOrganizationId).get();
+        leafOrganization = organizationRepo.findById(leafOrgId).get();
 
-        assertEquals("Middle organization did not delete!", 2, organizationRepo.count());
+        assertEquals(2, organizationRepo.count(), "Middle organization did not delete!");
 
-        assertEquals("Hierarchy was not preserved when middle was deleted.  Leaf node " + leafOrganization.getName() + " (" + leafOrganization.getId() + ") didn't get it's grandparent " + topOrganization.getName() + " (" + topOrganization.getId() + ") as new parent.", topOrganization, leafOrganization.getParentOrganization());
+        assertEquals(topOrganization, leafOrganization.getParentOrganization(), "Hierarchy was not preserved when middle was deleted.  Leaf node " + leafOrganization.getName() + " (" + leafOrganization.getId() + ") didn't get it's grandparent " + topOrganization.getName() + " (" + topOrganization.getId() + ") as new parent.");
     }
 
     @Test
@@ -366,7 +368,7 @@ public class OrganizationTest extends AbstractEntityTest {
         Organization parentOrganization = organizationRepo.create(TEST_PARENT_ORGANIZATION_NAME, parentCategory);
 
         childCategory = organizationCategoryRepo.create(TEST_CHILD_CATEGORY_NAME);
-        fieldPredicate = fieldPredicateRepo.create(TEST_FIELD_PREDICATE_VALUE, new Boolean(false));
+        fieldPredicate = fieldPredicateRepo.create(TEST_FIELD_PREDICATE_VALUE, Boolean.valueOf(false));
         inputType = inputTypeRepo.create(TEST_FIELD_PROFILE_INPUT_TEXT_NAME);
 
         WorkflowStep parentWSOne = workflowStepRepo.create(TEST_WORKFLOW_STEP_NAME, parentOrganization);
@@ -374,33 +376,33 @@ public class OrganizationTest extends AbstractEntityTest {
         FieldProfile fieldProfileOne = fieldProfileRepo.create(parentWSOne, fieldPredicate, inputType, TEST_GLOSS, false, false, false, false, false, false, null);
         parentWSOne.addAggregateFieldProfile(fieldProfileOne);
         parentWSOne = workflowStepRepo.save(parentWSOne);
-        parentOrganization = organizationRepo.findOne(parentOrganization.getId());
+        parentOrganization = organizationRepo.findById(parentOrganization.getId()).get();
 
         WorkflowStep parentWSTwo = workflowStepRepo.create("Parent Step 2", parentOrganization);
         FieldProfile fieldProfileTwo = fieldProfileRepo.create(parentWSTwo, fieldPredicate, inputType, TEST_GLOSS, false, false, false, false, false, false, null);
         parentWSOne.addAggregateFieldProfile(fieldProfileTwo);
         parentWSOne = workflowStepRepo.save(parentWSOne);
-        parentOrganization = organizationRepo.findOne(parentOrganization.getId());
+        parentOrganization = organizationRepo.findById(parentOrganization.getId()).get();
 
         Organization childOrganization = organizationRepo.create(TEST_CHILD_ORGANIZATION_NAME, parentOrganization, childCategory);
         Organization grandChildOrganization = organizationRepo.create(TEST_GRAND_CHILD_ORGANIZATION_NAME, childOrganization, childCategory);
 
-        parentOrganization = organizationRepo.findOne(parentOrganization.getId());
-        childOrganization = organizationRepo.findOne(childOrganization.getId());
+        parentOrganization = organizationRepo.findById(parentOrganization.getId()).get();
+        childOrganization = organizationRepo.findById(childOrganization.getId()).get();
 
         WorkflowStep childWSOne = workflowStepRepo.create("Child Step 1", childOrganization);
         FieldProfile fieldProfileThree = fieldProfileRepo.create(childWSOne, fieldPredicate, inputType, TEST_GLOSS, false, false, false, false, false, false, null);
         childWSOne.addAggregateFieldProfile(fieldProfileThree);
         childWSOne = workflowStepRepo.save(childWSOne);
-        childOrganization = organizationRepo.findOne(childOrganization.getId());
+        childOrganization = organizationRepo.findById(childOrganization.getId()).get();
 
         WorkflowStep childWSTwo = workflowStepRepo.create("Child Step 2", childOrganization);
         FieldProfile fieldProfileFour = fieldProfileRepo.create(childWSTwo, fieldPredicate, inputType, TEST_GLOSS, false, false, false, false, false, false, null);
         childWSTwo.addAggregateFieldProfile(fieldProfileFour);
         childWSTwo = workflowStepRepo.save(childWSTwo);
 
-        childOrganization = organizationRepo.findOne(childOrganization.getId());
-        grandChildOrganization = organizationRepo.findOne(grandChildOrganization.getId());
+        childOrganization = organizationRepo.findById(childOrganization.getId()).get();
+        grandChildOrganization = organizationRepo.findById(grandChildOrganization.getId()).get();
 
         WorkflowStep grandChildWSOne = workflowStepRepo.create("Grand Child Step 1", grandChildOrganization);
         FieldProfile fieldProfileFive = fieldProfileRepo.create(grandChildWSOne, fieldPredicate, inputType, TEST_GLOSS, false, false, false, false, false, false, null);
@@ -409,13 +411,13 @@ public class OrganizationTest extends AbstractEntityTest {
         grandChildWSOne = workflowStepRepo.save(grandChildWSOne);
 
         childOrganization = organizationRepo.restoreDefaults(childOrganization);
-        grandChildOrganization = organizationRepo.findOne(grandChildOrganization.getId());
+        grandChildOrganization = organizationRepo.findById(grandChildOrganization.getId()).get();
 
-        assertEquals("childOrganization's original workflow steps are not empty!", 0, childOrganization.getOriginalWorkflowSteps().size());
-        assertEquals("childOrganization's aggregated workflow steps do not equal parents!", parentOrganization.getAggregateWorkflowSteps(), childOrganization.getAggregateWorkflowSteps());
+        assertEquals(0, childOrganization.getOriginalWorkflowSteps().size(), "childOrganization's original workflow steps are not empty!");
+        assertEquals(parentOrganization.getAggregateWorkflowSteps(), childOrganization.getAggregateWorkflowSteps(), "childOrganization's aggregated workflow steps do not equal parents!");
 
-        assertEquals("grandChildOrganization's original workflow steps are not empty!", 0, grandChildOrganization.getOriginalWorkflowSteps().size());
-        assertEquals("grandChildOrganization's aggregated workflow steps do not equal parents!", parentOrganization.getAggregateWorkflowSteps(), grandChildOrganization.getAggregateWorkflowSteps());
+        assertEquals(0, grandChildOrganization.getOriginalWorkflowSteps().size(), "grandChildOrganization's original workflow steps are not empty!");
+        assertEquals(parentOrganization.getAggregateWorkflowSteps(), grandChildOrganization.getAggregateWorkflowSteps(), "grandChildOrganization's aggregated workflow steps do not equal parents!");
 
     }
 
@@ -425,22 +427,22 @@ public class OrganizationTest extends AbstractEntityTest {
         Organization parentOrganization = organizationRepo.create(TEST_PARENT_ORGANIZATION_NAME, parentCategory);
 
         workflowStepRepo.create(TEST_WORKFLOW_STEP_NAME, parentOrganization);
-        parentOrganization = organizationRepo.findOne(parentOrganization.getId());
+        parentOrganization = organizationRepo.findById(parentOrganization.getId()).get();
 
         workflowStepRepo.create("Step 2", parentOrganization);
-        parentOrganization = organizationRepo.findOne(parentOrganization.getId());
+        parentOrganization = organizationRepo.findById(parentOrganization.getId()).get();
 
         workflowStepRepo.create("Step 3", parentOrganization);
-        parentOrganization = organizationRepo.findOne(parentOrganization.getId());
+        parentOrganization = organizationRepo.findById(parentOrganization.getId()).get();
 
         workflowStepRepo.create("Step 4", parentOrganization);
-        parentOrganization = organizationRepo.findOne(parentOrganization.getId());
+        parentOrganization = organizationRepo.findById(parentOrganization.getId()).get();
 
-        assertEquals("The number of original workflowsteps was off!", 4, parentOrganization.getOriginalWorkflowSteps().size());
-        assertEquals("The number of aggregate workflowsteps was off!", 4, parentOrganization.getAggregateWorkflowSteps().size());
+        assertEquals(4, parentOrganization.getOriginalWorkflowSteps().size(), "The number of original workflowsteps was off!");
+        assertEquals(4, parentOrganization.getAggregateWorkflowSteps().size(), "The number of aggregate workflowsteps was off!");
     }
 
-    @After
+    @AfterEach
     public void cleanUp() {
 
         workflowStepRepo.findAll().forEach(workflowStep -> {
